# openfga-sdk

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AbortedMessageResponse.md  Assertion.md  AssertionTupleKey.md  AssertionsApi.md  AuthorizationModel.md  AuthorizationModelsApi.md  CheckRequest.md  CheckRequestTupleKey.md  Computed.md  Condition.md  ConditionParamTypeRef.md  CreateStoreResponse.md  ExpandRequest.md  ExpandRequestTupleKey.md  GetStoreResponse.md  ListObjectsRequest.md  ListObjectsResponse.md  ListStoresResponse.md  Node.md  Nodes.md  NullValue.md  ReadAssertionsResponse.md  ReadAuthorizationModelsResponse.md  ReadChangesResponse.md  ReadRequest.md  ReadRequestTupleKey.md  ReadResponse.md  RelationReference.md  RelationshipCondition.md  RelationshipQueriesApi.md  RelationshipTuplesApi.md  Store.md  StoresApi.md  StreamResultOfStreamedListObjectsResponse.md  StreamedListObjectsResponse.md  Tuple.md  TupleChange.md  TupleKey.md  TupleKeyWithoutCondition.md  TypeName.md  (+12 more)
src/apis/: assertions_api.rs  authorization_models_api.rs  configuration.rs  mod.rs  relationship_queries_api.rs  relationship_tuples_api.rs  stores_api.rs
src/models/: aborted_message_response.rs  any.rs  assertion.rs  assertion_tuple_key.rs  authorization_model.rs  check_request.rs  check_request_tuple_key.rs  check_response.rs  computed.rs  condition.rs  condition_param_type_ref.rs  contextual_tuple_keys.rs  create_store_request.rs  create_store_response.rs  expand_request.rs  expand_request_tuple_key.rs  expand_response.rs  get_store_response.rs  leaf.rs  metadata.rs  mod.rs  (+44 more)
