[package]
name = "openfga-sdk"
version = "1.0.2"
authors = ["community@openfga.dev"]
description = "A high performance and flexible authorization/permission engine built for developers and inspired by Google Zanzibar."
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
] }
